--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -14,6 +14,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a echo command
       shell: bash
-      run: echo -n 'Test String' | nc 192.168.43.216 80
+      run: echo "$GITHUB_CONTEXT"
        
       
