--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -3,7 +3,7 @@ env:
   GITHUB_CONTEXT: ${{ toJson(github) }}
 on:
   push:
-    branches: [main]
+    branches: [main, test-branch]
   
 jobs:
   senddetails:
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a echo command
       shell: bash
-      run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref'
+      run: echo "$GITHUB_CONTEXT"| grep -i 'after\|default_branch'
        
