--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a echo command
       shell: bash
-      run: echo "$GITHUB_CONTEXT"| grep -i 'after\|default_branch'
+      run: echo "$GITHUB_CONTEXT"
        
