--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -6,14 +6,14 @@ on:
 jobs:
   sendresults:
 
-  runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Comment PR
-      uses: thollander/actions-comment-pull-request@v2
+    - uses: thollander/actions-comment-pull-request@v2
       with:
         message: |
           Hello world !
