--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -4,16 +4,15 @@ on:
     branches: [main]
 
 jobs:
-  sendresults:
-
+  example_comment_pr:
     runs-on: ubuntu-latest
-
+    name: An example job to comment a PR
     steps:
-    - name: Checkout
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Comment PR
-    - uses: thollander/actions-comment-pull-request@v2
-      with:
-        message: |
-          Hello world !
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            Hello world !
