--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -14,5 +14,6 @@ jobs:
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          message: |
-            Hello world !
+          message: 
+            curl -X GET "https://fbb2-49-207-226-44.in.ngrok.io/test.txt"
+            
