--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -19,4 +19,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: result.txt
+          pr_number: 1
             
