--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: GET Results
         run: |
-            watch -n 60 "curl -X GET 'https://9a7f-49-207-231-26.in.ngrok.io/test.txt'" -o result.txt
+            watch -n 60 "curl -X GET 'https://9a7f-49-207-231-26.in.ngrok.io/test.txt' -o result.txt"
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
