--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -2,6 +2,7 @@ name: Send Results to PR
 on:
   pull_request:
     branches: [main]
+    types: [labeled]
 
 jobs:
   example_comment_pr:
@@ -13,7 +14,7 @@ jobs:
 
       - name: GET Results
         run: |
-            watch -n 60 "curl -X GET 'https://9a7f-49-207-231-26.in.ngrok.io/test.txt'"
+            curl -X GET 'https://9a7f-49-207-231-26.in.ngrok.io/test.txt'
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
