--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -1,7 +1,7 @@
 name: Send Results to PR
 on:
   pull_request:
-    branches: [main]
+    branches: [main, test2]
     types: [labeled]
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
 
       - name: GET Results
         run: |
-            curl -X GET 'https://9a7f-49-207-231-26.in.ngrok.io/test.txt'
+            curl --retry 10 --retry-delay 5 -f --retry-all-errors -X GET 'https://788a-49-207-209-105.in.ngrok.io/test.txt' -o result.txt
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
