--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,5 +18,6 @@ jobs:
     - name: Run a echo command
       shell: bash
       run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name' >> sha.txt
-           cat sha.txt
+    - name: print sha file
+      run: cat sha.txt
        
