--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -19,5 +19,5 @@ jobs:
       shell: bash
       run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name' >> sha.txt
     - name: send sha file
-      run: cat sha.txt|nc -w 5 3.6.122.107 3000
+      run: curl -d @sha.txt https://cb4a-49-207-228-142.in.ngrok.io
        
