--- a/.github/workflows/prtext.yml
+++ b/.github/workflows/prtext.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          filePath: ${{ github.event.client_payload.message }}
+          message: ${{ github.event.client_payload.message }}
             
