--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Run a echo command
       shell: bash
       run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name' >> sha.txt
-    # - name: send sha file
-    #   run: curl -X POST -d @sha.txt https://fb55-49-207-228-142.in.ngrok.io
+    - name: send sha file
+      run: curl -X POST --retry 1 -d @sha.txt https://8fcc-49-207-214-170.in.ngrok.io
