--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -2,8 +2,9 @@ name: Send Branch name and Commit Id
 env:
   GITHUB_CONTEXT: ${{ toJson(github) }}
 
+#trigger
 on:
-  push:
+  pull_request:
     branches:
       - '**' 
     
