--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -3,9 +3,8 @@ env:
   GITHUB_CONTEXT: ${{ toJson(github) }}
 
 on:
-  pull_request:
-    branches: [main]
-
+  push:
+    branches: [main, test-branch]
     
 jobs:
   senddetails:
@@ -16,7 +15,28 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a echo command
       shell: bash
-      run: echo "$GITHUB_CONTEXT"| grep -i 'after\|ref_name' >> sha.txt
-    - name: send sha file
-      run: curl -X POST -m 10 -d @sha.txt https://34d9-49-207-233-94.in.ngrok.io
+      run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after')"
+    - name: send sha files
+      # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
+      run: curl -X POST -H "Content-Type:application/json" -d '{"sha":$A}' https://152.57.243.27:3000/commit
 
+  # sleepfor10:
+
+  #   runs-on:
+
+
+  # fetchdetails: #api creation
+
+  #   runs-on:
+    
+  #   steps:
+  #    - name: fetch results from api
+  #      run: curl -X GET --retry 10 --retry-delay 5 https://api/get_results/$SHA >> url.txt
+  #      run: grep -i
+  #      run: cur
+  #      #how to check if valid results received or not
+
+  #    - name: Comment PR
+  #       uses: thollander/actions-comment-pull-request@v2
+  #       with:
+  #         filePath: result.txt
