--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a echo command
       shell: bash
-      run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after')"
+      run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)})"
     - name: send sha files
       # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
       run: curl -X POST -H "Content-Type:application/json" -d '{"sha":$A}'  https://c2bd-2409-4042-4e1f-a89a-2123-daf1-9cc0-2735.in.ngrok.io/commit
