--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,7 +18,7 @@ jobs:
       run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')" 
       run: echo "sha:${A}" >> s.json
     - name: send sha files
-      # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io test
+      # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
       run: curl -X POST -H "Content-Type:application/json" -d @s.json  https://c2bd-2409-4042-4e1f-a89a-2123-daf1-9cc0-2735.in.ngrok.io/commit
 
   # sleepfor10:
