--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -17,7 +17,8 @@ jobs:
       shell: bash
       run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')" 
     - name: Create sha file
-      run: echo "sha:${A}" >> s.json
+      run: echo "sha:${A}" >> s.json \
+           cat s.json
     - name: send sha files
       # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
       run: curl -X POST -H "Content-Type:application/json" -d @s.json  https://e36a-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
