--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -13,16 +13,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Run a echo command
+    - name: send data
       shell: bash
-      run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')" 
-    - name: Create sha file
-      run: echo "sha:${A}" >> s.json 
-    - name: Cat file
-      run: cat s.json 
-    - name: send sha files
-      # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
-      run: curl -X POST -H "Content-Type:application/json" -d @s.json  https://e36a-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
+      run: |
+       echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')"
+       echo "sha:${A}" >> s.json
+       cat s.json
+       curl -X POST -H "Content-Type:application/json" -d @s.json  https://e36a-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
+    # steps:
+    # - uses: actions/checkout@v3
+    # - name: Run a echo command
+    #   shell: bash
+    #   run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')" 
+    # - name: Create sha file
+    #   run: echo "sha:${A}" >> s.json 
+    # - name: Cat file
+    #   run: cat s.json 
+    # - name: send sha files
+    #   # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
+    #   run: curl -X POST -H "Content-Type:application/json" -d @s.json  https://e36a-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
 
   # sleepfor10:
 
