--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -3,7 +3,7 @@ env:
   GITHUB_CONTEXT: ${{ toJson(github) }}
 
 on:
-  push:
+  pull_request:
     branches: [main, test-branch]
     
 jobs:
@@ -18,28 +18,7 @@ jobs:
       run: |
        export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
        curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://10d0-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
-    # steps:
-    # - uses: actions/checkout@v3
-    # - name: Run a echo command
-    #   shell: bash
-    #   run: echo "A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')" 
-    # - name: Create sha file
-    #   run: echo "sha:${A}" >> s.json 
-    # - name: Cat file
-    #   run: cat s.json 
-    # - name: send sha files
-    #   # run: curl -X POST -m 10 -d @sha.json https://34d9-49-207-233-94.in.ngrok.io
-    #   run: curl -X POST -H "Content-Type:application/json" -d @s.json  https://e36a-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
-
-  # sleepfor10:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - name: Run a echo command
-  #     shell: bash
-  #     run: |
-       
+    
   fetchresults:
 
     runs-on: ubuntu-latest
@@ -56,7 +35,7 @@ jobs:
        cat result.txt
   
 
-  #    - name: Comment PR
-  #       uses: thollander/actions-comment-pull-request@v2
-  #       with:
-  #         filePath: result.txt
+    - name: Comment PR
+    - uses: thollander/actions-comment-pull-request@v2
+      with:
+        filePath: result.txt
