--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
        export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
        curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://10d0-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
-    
+         
   fetchresults:
 
     runs-on: ubuntu-latest
@@ -28,14 +28,12 @@ jobs:
     - name: fetch results from api
       shell: bash
       run: |
-       sleep 80s
+       sleep 10s
        export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
        echo $A
        curl -X GET --retry 10 --retry-delay 5 'https://10d0-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit/'"${A}" >> result.txt
        cat result.txt
-  
-
     - name: Comment PR
-    - uses: thollander/actions-comment-pull-request@v2
+      uses: thollander/actions-comment-pull-request@v2
       with:
         filePath: result.txt
