Testing workflow_call trigger 2

--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -34,8 +34,9 @@ jobs:
       shell: bash
       run: |
        export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+    - name: Internal trigger to another workflow
     - uses: DeeptiYadav1/sca-test/blob/test-branch/.github/workflows/commitid.yml@test-branch
-    - with:
+      with:
        sha-value: echo $A
 
 
