--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -35,7 +35,8 @@ jobs:
       run: |
        export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
     - name: Internal trigger to another workflow
-    - uses: DeeptiYadav1/sca-test/blob/test-branch/.github/workflows/commitid.yml@test-branch
+      shell: bash
+      uses: DeeptiYadav1/sca-test/blob/test-branch/.github/workflows/commitid.yml@test-branch
       with:
        sha-value: echo $A
 
