--- a/.github/workflows/reusabe.yml
+++ b/.github/workflows/reusabe.yml
@@ -1,8 +1,8 @@
 name: Do Something That Needs Scheduled
 
 on:
-  repository_dispatch:
-    types: test
+  workflow_dispatch:
+  
 
 jobs:
   build:
