--- a/.github/workflows/reusabe.yml
+++ b/.github/workflows/reusabe.yml
@@ -10,19 +10,50 @@ on:
   
 
 jobs:
-  build:
-    name: Run Some Thing
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo "SHA Value: $SHA"
-        env:
-          SHA: ${{ inputs.shavalue }}
+  # build:
+  #   name: Run Some Thing
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: |
+  #         echo "SHA Value: $SHA"
+  #       env:
+  #         SHA: ${{ inputs.shavalue }}
           
+  senddetails:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: send data
+      shell: bash
+      env:
+          SHA: ${{ inputs.shavalue }}
+      run: |
+       export A=echo $SHA
+       echo $A
+  #      curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
+
+
+  # fetchresults:
+
+  #   runs-on: ubuntu-latest
+    
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: fetch results from api
+  #     shell: bash
+  #     run: |
+  #      sleep 10s
+  #      export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+  #      echo $A
+  #      curl -X GET --retry 10 --retry-delay 5 'https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit/'"${A}" >> result.txt
+  #      cat result.txt
+  #   - name: Comment PR
+  #     uses: thollander/actions-comment-pull-request@v2
+  #     with:
+  #       filePath: result.txt
 
 
 
-# jobs:
-#   call-commitid:
-#     uses: DeeptiYadav1/sca-test/blob/test-branch/.github/workflows/commitid.yml
     
