Finding PR number

--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -2,16 +2,30 @@ name: Send Branch name and Commit Id
 env:
   GITHUB_CONTEXT: ${{ toJson(github) }}
 
-on:
-  push:
-    branches: [main, test-branch]
-
 # on:
-#   pull_request:
+#   push:
 #     branches: [main, test-branch]
+
+on:
+  pull_request:
+    branches: [main, test-branch]
     
 jobs:
-  # senddetails:
+  senddetails:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: send data
+      shell: bash
+      run: |
+        echo $GITHUB_CONTEXT
+  #      export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+  #      curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
+
+  
+  # testjob:
 
   #   runs-on: ubuntu-latest
 
@@ -21,24 +35,11 @@ jobs:
   #     shell: bash
   #     run: |
   #      export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
-  #      curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
-
-  
-  testjob:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: send data
-      shell: bash
-      run: |
-       export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
-    - name: Internal trigger to another workflow
-      shell: bash
-      uses: DeeptiYadav1/sca-test/blob/test-branch/.github/workflows/commitid.yml@test-branch
-      with:
-       sha-value: echo $A
+  #   - name: Internal trigger to another workflow
+  #     shell: bash
+  #     uses: DeeptiYadav1/sca-test/blob/test-branch/.github/workflows/commitid.yml@test-branch
+  #     with:
+  #      sha-value: echo $A
 
 
   # fetchresults:
