Finding PR number1

--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -20,8 +20,9 @@ jobs:
     - name: send data
       shell: bash
       run: |
-        echo $GITHUB_CONTEXT
-  #      export A=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+        
+       export A=$(echo "$GITHUB_CONTEXT"| grep -i '"number":')
+       echo $A
   #      curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
 
   
