branch and repo1

--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -21,7 +21,7 @@ jobs:
        echo "$GITHUB_CONTEXT"
        
 
-#  export A=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($2,2,length($2)-3)}')
+#  export An=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($2,2,length($2)-3)}')
 # curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
 
 
