--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,7 +18,7 @@ jobs:
     - name: send data
       shell: bash
       run: | 
-       export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+       export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}'
        export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}'
        export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}'
        echo $SHA
