--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,19 +18,18 @@ jobs:
     - name: send data
       shell: bash
       run: | 
-       export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
-      #  export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
-      #  export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')
-      #  echo $SHA
-      #  echo $PR
-      #  echo $REPO
-       echo $SHA
+       echo $GITHUB_CONTEXT
 
        
 
 #  export An=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($2,2,length($2)-3)}')
 # curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$A"'"}'  https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit
-
+# export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+#        export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
+#        export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')
+#        echo $SHA
+#        echo $PR
+#        echo $REPO
 
   #  fetchresults:
 
