--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -17,8 +17,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: send data
       shell: bash
-      run: | 
-       echo $GITHUB_CONTEXT
+      run: |
+       export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}') 
+       echo $REPO
 
        
 
