branch and repo3

--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -20,6 +20,8 @@ jobs:
       run: |
        export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}') 
        echo $REPO
+       export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
+       echo $PR
 
        
 
@@ -29,7 +31,7 @@ jobs:
 #        export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
 #        export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')
 #        echo $SHA
-#        echo $PR
+#        echo $P
 #        echo $REPO
 
   #  fetchresults:
