branch and repo3

--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,8 +18,9 @@ jobs:
     - name: send data
       shell: bash
       run: |
-       export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}') 
+       export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'
        echo $REPO
+       
        export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
        echo $PR
 
