--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,8 +18,8 @@ jobs:
     - name: send data
       shell: bash
       run: |
-       export BRANCH=$(echo "$GITHUB_CONTEXT"| grep -i '"head_ref":')
-       echo $BRANCH
+       export PR=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"number":'| awk '{print substr($2,2,length($2)-3)}')
+       echo $PR
 
        
 
@@ -51,9 +51,10 @@ jobs:
   #      run: |
   #       sleep 10s
   #       export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
-  #       export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}'
-  #       export REPO=$(echo "$GITHUB_CONTEXT"| grep -i '"name":'|  awk '{print substr($2,2,length($2)-3)}'  
-  #       export BRANCH=
+  #       export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
+  #       export REPO=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')  
+          # export BRANCH=$(echo "$GITHUB_CONTEXT"| grep -i '"head_ref":'| awk '{print substr($2,2,length($2)-3)}')
+  # 
   #       curl -X GET --retry 10 --retry-delay 5 'https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit/'"${A}" >> result.txt
   #       cat result.txt
   #    - name: Comment PR
