--- a/.github/workflows/commitid.yml
+++ b/.github/workflows/commitid.yml
@@ -18,8 +18,10 @@ jobs:
     - name: send data
       shell: bash
       run: |
-       export PR=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"number":'|awk '{print substr($2,1,length($2)-1)}')
-       echo $PR
+       export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+       export REPO=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')
+       curl -X POST -H "Content-Type: application/json" -d '{"sha" :"'"$SHA"'", "repo" :"'"$REPO"'"}'  https://1a5b-2405-201-20-caf-5574-63e3-2550-57dd.in.ngrok.io/commit
+
 
        
 
@@ -40,24 +42,23 @@ jobs:
 #        echo $P
 #        echo $REPO
 
-  #  fetchresults:
+    fetchresults:
 
-  #    runs-on: ubuntu-latest
+      runs-on: ubuntu-latest
     
-  #    steps:
-  #    - uses: actions/checkout@v3
-  #    - name: fetch results from api
-  #      shell: bash
-  #      run: |
-  #       sleep 10s
-  #       export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
-  #       export PR=$(echo "$GITHUB_CONTEXT"| grep -i '"number":'| awk '{print substr($4,1,length($4)-1)}')
-  #       export REPO=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')  
-          # export BRANCH=$(echo "$GITHUB_CONTEXT"| grep -i '"head_ref":'| awk '{print substr($2,2,length($2)-3)}')
-  # 
-  #       curl -X GET --retry 10 --retry-delay 5 'https://d11c-2409-4042-4e1f-a89a-d822-d0d9-2168-540d.in.ngrok.io/commit/'"${A}" >> result.txt
-  #       cat result.txt
-  #    - name: Comment PR
-  #      uses: thollander/actions-comment-pull-request@v2
-  #      with:
-  #        filePath: result.txt
+      steps:
+      - uses: actions/checkout@v3
+      - name: fetch results from api
+        shell: bash
+        run: |
+         sleep 10s
+         export SHA=$(echo "$GITHUB_CONTEXT"| grep -i 'after'| awk '{print substr($2,2,length($2)-3)}')
+         export PR=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"number":'|awk '{print substr($2,1,length($2)-1)}')
+         export REPO=$(echo "$GITHUB_CONTEXT"| grep -m 1 -i '"name":'|  awk '{print substr($2,2,length($2)-3)}')  
+         export BRANCH=$(echo "$GITHUB_CONTEXT"| grep -i '"head_ref":'| awk '{print substr($2,2,length($2)-3)}')
+         curl -X GET --retry 10 --retry-delay 5 'https://1a5b-2405-201-20-caf-5574-63e3-2550-57dd.in.ngrok.io/commit/'"${A}"'?repo='"${REPO}"'&branch='"${BRANCH}"'&pr='"${PR}" >> result.txt
+         cat result.txt
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          filePath: result.txt
