--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -4,7 +4,9 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
       - uses: actions/checkout@master
+
       - name: Run Snyk to check for vulnerabilities
       - uses: snyk/actions/ruby@master
         continue-on-error: true # To make sure that SARIF upload gets called
@@ -12,6 +14,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --sarif-file-output=snyk.sarif
+          
       - name: Upload result to GitHub Code Scanning
       - uses: github/codeql-action/upload-sarif@v2
         with:
