--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
 
       - name: Run Snyk to check for vulnerabilities
-      - uses: snyk/actions/ruby@master
+        uses: snyk/actions/ruby@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
